--- a/vignettes/bibliography.bib
+++ b/vignettes/bibliography.bib
@@ -20,7 +20,7 @@
   journal = {Journal of Statistical Software}
 }
 @article{Gilmour2017,
-  url = {https://www.vsni.co.uk/},
+  url = {https://vsni.co.uk/},
   year  = {2017},
   author = {Butler, D. G. and Cullis, B.R. and A. R. Gilmour and Gogel, B.G. and Thompson, R.},
   publisher = {VSN International Ltd, Hemel Hempstead, HP1 1ES, UK},
