--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 
 **statgenSTA** is an R package providing functions for phenotypic analysis of agricultural field trials using mixed models with and without spatial components.
 
-Analysis can be done using one of the R packages **SpATS**, **lme4** or **asreml**. For the latter a license is required which can be obtained upon purchase from [VSNi](<https://vsni.co.uk/software/asreml-r>).
+Analysis can be done using one of the R packages **SpATS**, **lme4** or **asreml**. For the latter a license is required which can be obtained upon purchase from [VSNi](<https://vsni.co.uk/software/asreml-r/>).
 
 statgenSTA has extensive options for summarizing and visualizing both the raw data and the fitted models. The example below shows a selection of what is possible. For a full overview of all options it is best to read the [**vignette**](https://biometris.github.io/statgenSTA/articles/statgenSTA.html)
 
